tests/buffer/errors/buffer_oob_set.dby
import std.buffer as buf
let b = buf.new(2)
buf.set(b, 2, 1)
